docs/orchestration/deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cascadia
  labels:
    name: cascadia
    app.kubernetes.io/name: cascadia-plm
